<resources>
    <string name="app_name">Fitness Pandora</string>

    <string name="firebase_url">https://fitnesspandora.firebaseio.com/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name must have only letters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_network_connection">No network connection</string>
    <string name="error_unknown_error">An unknown error has occurred.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Main Hub Screen -->
    <string name="pedometer_button">Pedometer</string>
    <string name="workout_button">Workout</string>
    <string name="stats_button">Statistics</string>
    <string name="settings_button">Settings</string>

    <!-- Strings related to Workout Screen -->
    <string name="upper_body">Upper Body</string>
    <string name="lower_body">Lower Body</string>
    <string name="mats">Mat Exercises</string>
    <string name="cardio">Cardio</string>
    <string name="title_activity_upper_body">UpperBodyActivity</string>
    <string name="title_activity_lower_body">LowerBodyActivity</string>
    <string name="title_activity_pedometer">PedometerActivity</string>

    <!-- Strings related to PedometerActivity -->
    <string name="pedometer">Pedometer</string>
    <string name="steps">Steps:</string>
    <string name="pedoStart">Start</string>
    <string name="pedoStop">Stop</string>
    <string name="pedoReset">Reset</string>
</resources>
