<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/workout_hub"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/upper_body_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upper_body"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/lower_body_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lower_body"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/mats_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mats"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/cardio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardio"
        android:textSize="20dp"/>

</LinearLayout>
