<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/user_hub"
    xmlns:android="http://schemas.android.com/apk/res/android"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="#DDDDDD"
        android:textSize="30dp"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_button"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        />




    <Button
        android:id="@+id/pedemeter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_button"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats_button"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAllCaps="false"
        />




</LinearLayout>



