<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pedometer"
        android:textStyle="bold"
        android:textSize="40sp"
        android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/steps"
            android:textStyle="bold"
            android:textSize="40sp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/pedometerCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/resetPedoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/pedoReset"
            android:textStyle="bold"
            android:textSize="40sp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/colorTextPrimary"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/startStopPedoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textStyle="bold"
            android:textSize="40sp"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#00c853"
            android:textAllCaps="false"/>

    </LinearLayout>
</RelativeLayout>